PyAMF Changelog
===============

This file contains information about the changes between the different versions
of PyAMF.

0.3.1 (unreleased)
------------------
 - Solved issue with AMFPHP exceptions in AMF client (Ticket:258) 
 - Fixed issue with url parsing in AMF client (Ticket:256)

0.3 (2008-04-14)
----------------
 - Added compatibility module for Google App Engine (Ticket:247)
 - Fixed the signed interpretation of compressed integers in AMF3 (Ticket:241)
 - Classic class decoding would throw an AttributeError (Ticket:248)
 - Reloading adapter modules caused errors in Django, Pylons and Google App
   Engine. Resolved by removing dependancy on Importing module and incorporating
   into pyamf.util (Ticket:250)
 - Adapter framework can now be fired when only loading submodules (Ticket:246)
 - Made util.BufferedByteStream endian aware (Ticket:231)
 - Fixed issue with Twisted threads (Ticket:233)

0.2 (2008-03-12)
----------------

 - Removed amfinfo console_script (Ticket:226)
 - Encoders/Decoders now check for __getstate__/__setstate__ respectively
   (Ticket:209)
 - Gateway import hack has now been removed - permanently (Ticket:224)
 - Encoding/decoding performance has been increased 2x for AMF0 and upto 10x(!)
   for AMF3 (Ticket:198)
 - Logging is now possible in all the supported gateways (Ticket:173)
 - A new preprocessor function that runs after authentication, but before
   invoking the service method (Ticket:196)
 - authenticator can now be decorated with expose_request (Ticket:195)
 - Python 2.3 support (Ticket:33)
 - Python 2.6 support (Ticket:222)
 - Made PyAMF distributable as zip-based Python Egg (Ticket:193)

0.1.1 (2008-02-18)
------------------

 - AMF3 encoder reported incorrect byte length header for non-ASCII string data.
   Patch supplied by akaihola. (Ticket:194)
 - Decoder context not cleared between reading the remoting header and body.
   Reported by gerard. (Ticket:192)

0.1 (2008-02-11)
----------------
